--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,13 +26,13 @@
 }
 
 .container .top-box .comname {
-  font-size: 20rpx;
+  font-size: 24rpx;
   color: #FFFFFF;
   margin-right: 10rpx;
 }
 
 .container .top-box .username {
-  font-size: 20rpx;
+  font-size: 24rpx;
   color: #FFFFFF;
 }
 
@@ -84,7 +84,7 @@
 
 .container .count-tabel .count-tabel-item .tabel-item {
   font-family: PingFangSC-Regular;
-  font-size: 22rpx;
+  font-size: 28rpx;
   color: #222222;
   letter-spacing: 0;
   padding: 0 16rpx 0 22rpx;
@@ -167,16 +167,16 @@
 
 .container .list-container .list-box .list-item-box .list-item-left .list-item-title {
   font-family: PingFangSC-Regular;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #A0A0A0;
   letter-spacing: 0;
-  width: 100rpx;
-  margin-right: 25rpx;
+  width: 114rpx;
+  margin-right: 28rpx;
 }
 
 .container .list-container .list-box .list-item-box .list-item-left .list-item-content {
   font-family: PingFangSC-Medium;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #4A4A4A;
   letter-spacing: 0;
 }
@@ -217,4 +217,14 @@
   letter-spacing: 0;
   text-align: right;
   margin-right: 36rpx;
+}
+
+.container .list-container .list-box .nomore {
+  font-family: PingFangSC-Regular;
+  font-size: 24rpx;
+  letter-spacing: 0;
+  color: #AEAEAE;
+  margin-bottom: 20rpx;
+  width: 100%;
+  text-align: center;
 }
