--- a/pages/login/login.scss
+++ b/pages/login/login.scss
@@ -54,10 +54,12 @@
         .password-box {
             line-height: 30rpx;
             margin-bottom: 70rpx;
+            margin-top: 10rpx;
         }
         .label {
             width: 88rpx;
-            height: 42rpx;
+            height: 80rpx;
+            line-height: 80rpx;
             font-family: PingFangHK-Regular;
             font-size: 28rpx;
             color: #4A4A4A;
