--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,7 +25,7 @@
         </view>
     </view>
     <scroll-view class="list-container" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-166-55-50-9)}}px">
-        <view class="list-box">
+        <view class="list-box ">
             <view class="list-item-box flexrbc" bind:tap="toDetail" wx:for="{{list}}" wx:key="index" data-id="{{item.id}}" data-sign="{{item.sign}}">
                 <view class="check-type" hidden="{{item.checkState==1}}">未审核</view>
                 <view class="list-item-left">
@@ -73,12 +73,18 @@
                     <view hidden="{{item.checkState==1}}" class="in-type">入账中</view>
                 </view>
             </view>
+            <view hidden="{{list.length==0}}" class="nomore">
+                没有更多了~
+            </view>
         </view>
         <view hidden="{{list.length!=0}}" class="empty flexccc">
             <image class="empty-img" src="../../assets/images/no-data.png" mode="aspectFit|aspectFill|widthFix"></image>
             <view class="no-data">暂无数据</view>
         </view>
     </scroll-view>
+    
+        
+    
     <van-tabbar active="{{ active }}" bind:change="changeTab">
         <van-tabbar-item info="{{numoflist!=0?numoflist:''}}">
             <image slot="icon" src="{{ icon.index }}" mode="aspectFit" style="width: 20px; height: 20px;" />
