--- a/pages/index/indexdetail/indexdetail.wxss
+++ b/pages/index/indexdetail/indexdetail.wxss
@@ -53,7 +53,7 @@
 
 .container .top-box .top-content-box .top-title-box .top-title {
   font-family: PingFangSC-Regular;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #222222;
   letter-spacing: 0;
 }
@@ -67,7 +67,7 @@
 
 .container .top-box .top-content-box .overage {
   font-family: PingFangSC-Regular;
-  font-size: 20rpx;
+  font-size: 24rpx;
   color: #BBBBBB;
   letter-spacing: 0;
   margin-top: 20rpx;
@@ -94,7 +94,7 @@
 
 .container .middle-box .middle-content-box .middle-label {
   font-family: PingFangSC-Regular;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #A0A0A0;
   letter-spacing: 0;
   line-height: 40rpx;
@@ -103,7 +103,7 @@
 
 .container .middle-box .middle-content-box .middle-content {
   font-family: PingFangSC-Medium;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #4A4A4A;
   letter-spacing: 0;
   line-height: 40rpx;
@@ -114,7 +114,7 @@
   width: 716rpx;
   height: 680rpx;
   margin-left: 17rpx;
-  overflow: auto;
+  overflow: hidden;
   overflow-x: hidden;
 }
 
@@ -126,14 +126,14 @@
 
 .container .list-box .list-content-box .list-label {
   font-family: PingFangSC-Regular;
-  font-size: 20rpx;
+  font-size: 24rpx;
   color: #BBBBBB;
   letter-spacing: 0;
 }
 
 .container .list-box .list-content-box .list-content {
   font-family: PingFangSC-Medium;
-  font-size: 25rpx;
+  font-size: 28rpx;
   color: #4A4A4A;
   letter-spacing: 0;
 }
